Grasp Icon Lower Left Fails On OSX #38876

Closed
opened 2014-02-27 21:19:49 +01:00 by Atomic · 8 comments

System Information
Mac Mini OSX 10.9.1.
Intel HD4000

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
Open the default scene.
Now collapse all the views into a single panel. The type does not matter.
When you have a single panel, the grasp icon appears in the lower left corner.
But on OSX 10.9.1 the grasp icon can not be used or activated because a resizing icon appears in it's place.

Exact steps for others to reproduce the error
As above.

The end result is that once you collapse the panels down to one panel you can not recover from that and have to close Blender and start again with a prefab layout.

**System Information** Mac Mini OSX 10.9.1. Intel HD4000 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Open the default scene. Now collapse all the views into a single panel. The type does not matter. When you have a single panel, the grasp icon appears in the lower left corner. But on OSX 10.9.1 the grasp icon can not be used or activated because a resizing icon appears in it's place. **Exact steps for others to reproduce the error** As above. The end result is that once you collapse the panels down to one panel you can not recover from that and have to close Blender and start again with a prefab layout.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AtomP

Added subscriber: @AtomP

Added subscriber: @brecht

Added subscriber: @brecht

Clicking in the top right corner of the window still works. I think we can just hide the lower left grasp widget in this case, avoiding this entirely would mean making a big design change.

Clicking in the top right corner of the window still works. I think we can just hide the lower left grasp widget in this case, avoiding this entirely would mean making a big design change.

This issue was referenced by blender/blender-addons-contrib@d7a2d2b693

This issue was referenced by blender/blender-addons-contrib@d7a2d2b693c7b058d268e7d008616fd9d284675c

This issue was referenced by d7a2d2b693

This issue was referenced by d7a2d2b693c7b058d268e7d008616fd9d284675c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d7a2d2b693.

Closed by commit d7a2d2b693.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38876
No description provided.