Fix T38876: hide area split widget in lower left of widget on OS X.

This is already used by the operating system for window resizing, you must use
the widget in the top right of the area to split.